[package]
name = "grassland"
version = "0.0.1"
authors = ["00hello <00hello@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duct = "0.13.3"
hex = "0.4.0"

# bitcoin = "0.20.0"
# bitcoin's sha256 too slow. 0 Frames hashed per second when printing to console after the transmission of each full frame from the OpenCV

# sha2 = "0.8.0"
# sha2's sha256 too slow. 0 Frames hashed per second when printing to console after the transmission of each full frame from the OpenCV

ring = "0.16.9"
# https://github.com/briansmith/ring
# ring's sha256 pretty good. ~27 Frames hashed per second with no printing to console... (18 FPS if printing to console after the transmission of each full frame from the OpenCV)
